start create the aisde

--- a/index.html
+++ b/index.html
@@ -10,7 +10,37 @@
     <title>Quala</title>
 </head>
 <body>
-    
+    <section class="main-section position-relative">
+        <aside class="position-absolute font-weight-bold">
+            <div class="user-info position-absolute">
+                <div class="user-container position-absolute font-weight-bold">
+                    <div class="image position-absolute">
+                        <img src="" alt="">
+                    </div>
+                    <div class="info position-absolute"></div>
+                </div>
+            </div>
+            <div class="others position-absolute">
+                <div class="part-1 position-absolute">
+                    <div class="title position-absolute pt-2 pl-4 font-weight-bold text-capitalize">tasks</div>
+                    <div class="category position-absolute font-weight-bold">
+                        <div class="choose-1 option"></div>
+                        <div class="choose-2 option"></div>
+                        <div class="choose-3 option"></div>
+                    </div>
+                </div>
+                <div class="part-2 position-absolute">
+                    <div class="title position-absolute pt-2 pl-4 font-weight-bold text-capitalize">tasks</div>
+                    <div class="category position-absolute font-weight-bold">
+                        <div class="choose-1 option"></div>
+                        <div class="choose-2 option"></div>
+                        <div class="choose-3 option"></div>
+                    </div>
+                </div>
+                <div class="part-3 position-absolute"></div>
+            </div>
+        </aside>
+    </section>
     <script src="./js/all.min.js"></script>
     <script src="./js/javascript.js"></script>
     <script src="./app.js"></script>
