create peice of the section and make a part of responsive code

--- a/index.html
+++ b/index.html
@@ -11,33 +11,41 @@
 </head>
 <body>
     <section class="main-section position-relative">
+        <div class="container position-absolute">
+            <header class="py-2 px-lg-4 px-sm-2 font-weight-bold d-flex align-items-center justify-content-between">
+                <a href="#" class="logo text-capitalize">my tasks</a>
+                <button class="border-0 px-4 py-2 font-weight-bold text-capitalize">add task</button>
+            </header>
+        </div>
         <aside class="position-absolute font-weight-bold">
             <div class="user-info position-absolute">
                 <div class="user-container position-absolute font-weight-bold">
                     <div class="image position-absolute">
                         <img src="" alt="">
                     </div>
-                    <div class="info position-absolute"></div>
+                    <div class="info position-absolute text-center text-uppercase">fares yasser</div>
                 </div>
             </div>
             <div class="others position-absolute">
                 <div class="part-1 position-absolute">
                     <div class="title position-absolute pt-2 pl-4 font-weight-bold text-capitalize">tasks</div>
                     <div class="category position-absolute font-weight-bold">
-                        <div class="choose-1 option"></div>
-                        <div class="choose-2 option"></div>
-                        <div class="choose-3 option"></div>
+                        <div class="choose-1 option px-3 py-2">My Tasks</div>
+                        <div class="choose-2 option px-3 py-2">Team</div>
+                        <div class="choose-3 option px-3 py-2">Others</div>
                     </div>
                 </div>
                 <div class="part-2 position-absolute">
-                    <div class="title position-absolute pt-2 pl-4 font-weight-bold text-capitalize">tasks</div>
+                    <div class="title position-absolute pt-2 pl-4 font-weight-bold text-capitalize">#Chats</div>
                     <div class="category position-absolute font-weight-bold">
-                        <div class="choose-1 option"></div>
-                        <div class="choose-2 option"></div>
-                        <div class="choose-3 option"></div>
+                        <div class="choose-1 option px-3 py-2">#General</div>
+                        <div class="choose-2 option px-3 py-2">#Markting</div>
+                        <div class="choose-3 option px-3 py-2">#Sales</div>
                     </div>
                 </div>
-                <div class="part-3 position-absolute"></div>
+                <div class="part-3 position-absolute">
+                        <button class="position-absolute font-weight-bold border-0 py-2 px-4 text-capitalize">invite others</button>
+                </div>
             </div>
         </aside>
     </section>
