create part of create task page section

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <div class="container position-absolute">
             <header class="py-2 px-lg-4 px-sm-2 font-weight-bold d-flex align-items-center justify-content-between">
                 <a href="#" class="logo text-capitalize">my tasks</a>
-                <button class="border-0 px-4 py-2 font-weight-bold text-capitalize">add task</button>
+                <button class="border-0 add-task-button px-4 py-2 font-weight-bold text-capitalize">add task</button>
             </header>
         </div>
         <aside class="position-absolute font-weight-bold">
